<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="0dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView
            android:id="@+id/check"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/red_100">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:tint="@color/red_400"
                    app:srcCompat="@drawable/alert_circle" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:lines="1"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:layout_below="@id/check"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/error"
            android:textColor="@color/red_400" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/nameTextView"
            android:textAlignment="center"
            android:lineHeight="22dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/error_loading_data"
            android:textColor="#111111" />



        <androidx.cardview.widget.CardView
            android:id="@+id/card_close"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_desc"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/red_400">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="18dp"
                android:paddingBottom="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/done"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.cardview.widget.CardView>