<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserrat_thin"
            android:textSize="28sp"
            android:textColor="@color/font_dark"
            android:text="@string/title_movies"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/title_container"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/search_background">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_search">

        <View
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/light_grey"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>


        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_top_rated"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:onClick="clickTopRated"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardPreventCornerOverlap="false"
                android:layout_weight="1"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/top_rated"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"
                        android:textColor="#ffffff"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_popular"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:onClick="clickPopular"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:cardPreventCornerOverlap="false"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/popular"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"
                        android:textColor="@color/grey"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/buttons_container"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>